<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zakatLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZakatGold">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="202dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/enter_gold_in_tola"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationX="1dp"
            android:translationY="70dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/GoldInput"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/e_g_7_5"
            android:textAlignment="center"
            android:translationY="70dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/enter_price_of_gold_per_tola"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/TolaInRs"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/eg_115000"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="327dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/CalculateZakatGold"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/calculatezakat"
            android:translationY="75dp" />

        <TextView
            android:id="@+id/GoldZakatoutput"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:text="@string/zakatinrupees"
            android:textAlignment="center"
            android:textSize="20sp"
            android:translationY="150dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>